<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/clouds"
    tools:context=".ui.fragment.MainFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/image"/>

    <EditText
        android:id="@+id/et_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_title"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/et_input_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_body"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_post"
        android:backgroundTint="@color/red"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/update_post"
        android:backgroundTint="@color/red"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_post"
        android:backgroundTint="@color/red"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_post"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_post"
        android:backgroundTint="@color/red"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="234dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/orange"
        android:text="@string/back_to_fragment"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>